[tool.poetry]
name = "gql-subscriptions"
version = "0.0.3"
description = "A Python3.7+ port of Apollo Graphql Subscriptions."
authors = ["ysun <sunyu418@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/syfun/gql-subscriptions"

packages = [
    { include = "gql_subscriptions" }
]

[tool.poetry.dependencies]
python = ">=3.7"
typing_extensions = { version =  "^3.7.4", python = "< 3.8" }

aioredis = { version = ">=1.3", optional = true }

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
flake8 = "*"
pre-commit = "*"
pytest = "^5.4.1"
pytest-asyncio = "^0.11"

[tool.poetry.extras]
redis = ["aioredis"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
